--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Generate YAML File</title>
 </head>
 <body>
-    <h1>Metadata Generator - TEST</h1>
+    <h1>Metadata Generator - TEST2</h1>
 
     <form id="yamlForm">
         <h2>Summary</h2>
