--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="form-container">
 
-        <h2>Metadata Generator</h2>
+        <h2>Metadata Generator TEST</h2>
         This metadata format is based on the FOT-Net Data Sharing Framework (DSF).
         The DSF can be consulted if anything is unclear; each section in the format
         is directly or indirectly based on a section in the DSF
