mall css update

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                         id="field_dummy_information_dummy"></textarea>
                     </div>
                     <center>
-                        <button class="add-question-btn" 
+                        <button class="base-style standard-style big-style " 
                         onclick="addAtribute(this.id)"
                         id="field_dummy_button_dummy">Add atribute</button>
                     </center>
@@ -559,13 +559,13 @@
                         id="field_1_information_1"></textarea>
                     </div>
                     <center>
-                        <button class="add-question-btn" 
+                        <button class="base-style standard-style big-style " 
                         onclick="addAtribute(this.id)"
                         id="field_1_button_1">Add atribute</button>
                     </center>
                 </div>
                 <center>
-                    <button class="add-question-btn" 
+                    <button class="base-style standard-style big-style " 
                     onclick="addField(this.id)"
                     id="button_1">Add field</button>
                 </center>
