--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                     <div class="question" id="field_dummy_atribute_dummy">
                         <button class="base-style standard-style big-style deleteButton" onclick="deleteParent()"
                             id="delete_button" style="display: none">X</button>
-                        <select class="text-input-field" id="field_dummy_key_dummy">
+                        <select class="text-input-field" id="field_dummy_key_dummy" style="margin-bottom: 12px;">
                             <option value="" disabled selected>Select an atribute</option>
                             <option value="data_precision">Data precision</option>
                             <option value="unit">Unit</option>
@@ -554,7 +554,7 @@
                         <div class="question" id="field_1_atribute_1">
                             <button class="base-style standard-style big-style deleteButton" onclick="deleteParent()"
                                 id="delete_button" style="display: none">X</button>
-                                <select class="text-input-field" id="field_1_key_1">
+                                <select class="text-input-field" id="field_1_key_1" style="margin-bottom: 12px;">
                                     <option value="" disabled selected>Select an atribute</option>
                                     <option value="data_precision">Data precision</option>
                                     <option value="unit">Unit</option>
@@ -577,7 +577,7 @@
                                     <option value="options">Options</option>
         
                                 </select>
-                                <br>
+                                <br style="margin-bottom: 12px;">
                             <textarea oninput="autoGrow(this)" class="text-input-field"
                                 placeholder="Atribute information" onfocus="this.placeholder = ''"
                                 onblur="this.placeholder = 'Atribute information'"
