--- a/index.html
+++ b/index.html
@@ -617,6 +617,10 @@
 
         </div>
     </div>
+
+    <button class="base-style standard-style big-style " type="button" onclick="uploadYAMLFile('Descriptive')"> Upload
+    </button><button onclick="initiateGitHubOAuth()">Initiate GitHub OAuth</button>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/js-yaml/dist/js-yaml.min.js"></script>
