--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdbootstrap@/css/mdb.min.css" integrity=""
-    crossorigin="anonymous">
 <link rel="stylesheet" href="main.css">
 
 
@@ -49,6 +47,15 @@
                 must make sense even if those links should stop working.)
                 <hr>
                 <div>
+                    <div class="question">
+                        <label class="question-label" for="filename">
+                            Filename
+                            <span class="question-mark" title="Filename for the metadata file to be generated.">
+                                &#x1F6C8;
+                            </span>
+                        </label><br>
+                        <input class="text-input-field" type="text" id="filename">
+                    </div>
 
                     <div class="question">
                         <label class="question-label" for="why_was_it_collected">
@@ -369,6 +376,9 @@
                     <button class="base-style standard-style big-style " type="button"
                         onclick="downloadYAMLFile('Administrative')"> Download
                     </button>
+                    <button class="base-style standard-style big-style " type="button"
+                        onclick="uploadYAMLFile('Administrative')"> Upload
+                    </button>
                 </center>
             </div>
 
@@ -473,6 +483,9 @@
                     <button class="base-style standard-style big-style " type="button"
                         onclick="downloadYAMLFile('Structural')"> Download
                     </button>
+                    <button class="base-style standard-style big-style " type="button"
+                        onclick="uploadYAMLFile('Structural')"> Upload
+                    </button>
                 </center>
             </div>
 
@@ -525,11 +538,11 @@
                         onfocus="this.placeholder = ''" onblur="this.placeholder = 'Description'"
                         id="field_description_dummy"></textarea>
 
-                    <div class="question" id="field_dummy_atribute_dummy">
+                    <div class="question" id="field_dummy_Attribute_dummy">
                         <button class="base-style standard-style big-style deleteButton" onclick="deleteParent()"
                             id="delete_button" style="display: none">X</button>
                         <select class="text-input-field" id="field_dummy_key_dummy" style="margin-bottom: 12px;">
-                            <option value="" disabled selected>Select an atribute</option>
+                            <option value="" disabled selected>Select an Attribute</option>
                             <option value="data_precision">Data precision</option>
                             <option value="unit">Unit</option>
                             <option value="sample_rate">Sample rate</option>
@@ -553,15 +566,16 @@
 
                         </select>
                         <br>
-                        <textarea oninput="autoGrow(this)" class="text-input-field" placeholder="Atribute information"
-                            onfocus="this.placeholder = ''" onblur="this.placeholder = 'Atribute information'"
+                        <textarea oninput="autoGrow(this)" class="text-input-field" placeholder="Attribute information"
+                            onfocus="this.placeholder = ''" onblur="this.placeholder = 'Attribute information'"
                             id="field_dummy_information_dummy"></textarea>
                     </div>
 
-                    <center id="add_atribute_button">
+                    <center id="add_Attribute_button">
                         <button class="base-style 
                         white-style 
-                        big-style " onclick="addAtribute(this.id)" id="field_dummy_button_dummy">Add atribute</button>
+                        big-style " onclick="addAttribute(this.id)" id="field_dummy_button_dummy">Add
+                            Attribute</button>
                     </center>
                 </div>
 
@@ -572,11 +586,11 @@
                         <textarea oninput="autoGrow(this)" class="text-input-field" placeholder="Description"
                             onfocus="this.placeholder = ''" onblur="this.placeholder = 'Description'"
                             id="field_description_1"></textarea>
-                        <div class="question" id="field_1_atribute_1">
+                        <div class="question" id="field_1_Attribute_1">
                             <button class="base-style standard-style big-style deleteButton" onclick="deleteParent()"
                                 id="delete_button" style="display: none">X</button>
                             <select class="text-input-field" id="field_1_key_1" style="margin-bottom: 12px;">
-                                <option value="" disabled selected>Select an atribute</option>
+                                <option value="" disabled selected>Select an Attribute</option>
                                 <option value="data_precision">Data precision</option>
                                 <option value="unit">Unit</option>
                                 <option value="sample_rate">Sample rate</option>
@@ -601,14 +615,14 @@
                             </select>
                             <br style="margin-bottom: 12px;">
                             <textarea oninput="autoGrow(this)" class="text-input-field"
-                                placeholder="Atribute information" onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = 'Atribute information'"
+                                placeholder="Attribute information" onfocus="this.placeholder = ''"
+                                onblur="this.placeholder = 'Attribute information'"
                                 id="field_1_information_1"></textarea>
                         </div>
-                        <center id="add_atribute_button">
+                        <center id="add_Attribute_button">
                             <button class="base-style 
                             white-style 
-                            big-style " onclick="addAtribute(this.id)" id="field_1_button_1">Add atribute</button>
+                            big-style " onclick="addAttribute(this.id)" id="field_1_button_1">Add Attribute</button>
                         </center>
                     </div>
                     <center id="add_field_button">
@@ -625,6 +639,9 @@
                     <button class="base-style standard-style big-style " type="button"
                         onclick="downloadYAMLFile('Descriptive')"> Download
                     </button>
+                    <button class="base-style standard-style big-style " type="button"
+                        onclick="uploadYAMLFile('Descriptive')"> Upload
+                    </button>
                 </center>
 
             </div>
@@ -633,9 +650,11 @@
     </div>
     </div>
 
+
     <script src="https://cdn.jsdelivr.net/npm/js-yaml/dist/js-yaml.min.js"></script>
     <script src="scripts/form.js"></script>
     <script src="scripts/generate.js"></script>
+    <script src="scripts/updownload.js"></script>
 
 </body>
 
